syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/direktiv/direktiv/pkg/functions/grpc";

message FunctionsBaseInfo {
	optional string name = 1;
	optional string namespace = 2;
	// optional string workflow = 3;
	optional string image = 4;
	optional string cmd = 5;

	optional int32 size = 6;
	optional int32 minScale = 7;

	optional string namespaceName = 8;
	optional string path = 9;
	optional string revision = 10;

	map<string, string> envs = 11;
}

message FunctionsCondition {
	optional string name = 1;
	optional string status = 2;
	optional string reason = 3;
	optional string message = 4;
}

message FunctionsConfig {
	optional int32 maxscale = 1;
}

message FunctionsInfo {
	optional FunctionsBaseInfo info = 1;
	optional string status = 2;
	repeated FunctionsCondition conditions = 3;
	optional string serviceName = 4;
}

message FunctionsPodsInfo {
	optional string name = 1;
	optional string status = 2;
	optional string serviceName = 3;
	optional string serviceRevision = 4;
}

message FunctionsRevision {
	optional string name = 1;
	optional string image = 2;
	optional string cmd = 3;
	optional int32 size = 4;
	optional int32 minScale = 5;

	optional int64 generation = 6;
	optional int64 created = 7;

	optional string status = 8;
	repeated FunctionsCondition conditions = 9;

	optional int64 traffic = 10;

	int64 desiredReplicas = 11;
	int64 actualReplicas = 12;

	optional string rev = 13;

}
