syntax = "proto3";

package direktiv_functions;

option go_package = "github.com/vorteil/direktiv/pkg/functions/grpc";

import "pkg/functions/grpc/functions-common.proto";

message CreateFunctionRequest {
	optional BaseInfo info = 1;
}
