syntax = "proto3";

package grpc;

option go_package = "github.com/vorteil/direktiv/pkg/isolates/grpc";

message BaseInfo {
	optional string name = 1;
	optional string namespace = 2;
	optional string workflow = 3;
	optional string image = 4;
	optional string cmd = 5;

	optional int32 size = 6;
	optional int32 minScale = 7;
}

message Condition {
	optional string name = 1;
	optional string status = 2;
	optional string reason = 3;
	optional string message = 4;
}

message IsolateConfig {
	optional int32 maxscale = 1;
}
